--- a/.github/workflows/Premerge_CI.yml
+++ b/.github/workflows/Premerge_CI.yml
@@ -14,7 +14,8 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v3
-      - name: setup node version
-        uses: action/setup-node@v3
+      - name: Use Node version
+        uses: actions/setup-node@v3
         with:
            node-version: 17
+
