adding new file for github action for devops videos

--- a/.github/workflows/Premerge_CI.yml
+++ b/.github/workflows/Premerge_CI.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Use Node version
         uses: actions/setup-node@v3
         with:
-           node-version: 17
+           node-version: {{ env.node-version }}
 
