adding new file for github action for devops videos

--- a/.github/workflows/Premerge_CI.yml
+++ b/.github/workflows/Premerge_CI.yml
@@ -8,7 +8,7 @@ on:
     branches:
      - main
 env:
-  node-version: 18
+  NODE_VERSION: 18
 
 jobs:
   My_build:
@@ -19,4 +19,4 @@ jobs:
       - name: Use Node version
         uses: actions/setup-node@v3
         with:
-           node-version: {{ env.node-version }}
+           node-version: ${{ env.NODE_VERSION }}
