--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -9,6 +9,10 @@ on:
     branches:
       - main
 
+    env:
+      API_KEY: ${{ secrets.API_KEY }}   # Access the API_KEY from GitHub secrets
+      NODE_VERSION: 18      
+
 # Define the jobs that run in the workflow
 jobs:
   build:
@@ -21,14 +25,6 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3  # This sets up Node.js on the runner
       with:
-        node-version: '16'  # Specify the Node.js version you want to use
+        node-version: ${{env.NODE_VERSION}}
+        GH_TOKEN: ${{secrets.API_KEY}} # Specify the Node.js version you want to use
 
-    - name: Install dependencies
-      run: npm install  # Installs dependencies defined in package.json
-
-    - name: Run tests
-      run: npm test  # Runs tests defined in your package.json
-
-    - name: Upload coverage results
-      if: success()  # Only upload if tests pass
-      uses: codecov/codecov-action@v3  # This uploads the test coverage to Codecov
