--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -10,7 +10,7 @@ on:
       - main
 
     env:
-      API_KEY: ${{ secrets.API_KEY }}   # Access the API_KEY from GitHub secrets
+      API_KEY: ${{ secrets.MY_SECRETS }}   # Access the API_KEY from GitHub secrets
       NODE_VERSION: 18      
 
 # Define the jobs that run in the workflow
